crates/perl-lsp-rs-core/tests/snapshots/diag_snap__duplicate_declaration_and_shadowing.snap
---
source: crates/perl-lsp-rs-core/tests/diag_snap.rs
assertion_line: 122
expression: snapshot
---
PL105 | Error | (44, 50) | Variable '$value' is declared again in the same scope -- remove the duplicate 'my' | Remove the duplicate 'my' keyword
PL200 | Warning | (0, 0) | This file has no package declaration. Add 'package MyModule;' to declare the package namespace. | Add 'package MyModule;' at the top of the file
