crates/perl-lsp-rs-core/tests/snapshots/diag_snap__missing_module_import.snap
---
source: crates/perl-lsp-rs-core/tests/diag_snap.rs
expression: snapshot
---
PL700 | Hint | (39, 59) | Module 'Does::Not::Exist' appears to be unused | Remove 'use Does::Not::Exist;' if it is not needed
