crates/perl-lsp-rs-core/tests/snapshots/diag_snap__package_module_happy_path.snap
---
source: crates/perl-lsp-diagnostics/tests/diagnostic_insta_snapshot_tests.rs
expression: snapshot
---

