crates/perl-lsp-rs-core/tests/snapshots/diag_snap__printf_dynamic_width_precision.snap
---
source: crates/perl-lsp-rs-core/tests/diag_snap.rs
assertion_line: 189
expression: snapshot
---
PL200 | Warning | (0, 0) | This file has no package declaration. Add 'package MyModule;' to declare the package namespace. | Add 'package MyModule;' at the top of the file
