crates/perl-lsp-rs-core/tests/snapshots/diag_snap__security_string_eval.snap
---
source: crates/perl-lsp-diagnostics/tests/diagnostic_insta_snapshot_tests.rs
expression: snapshot
---
PL600 | Warning | (39, 64) | String eval is a security risk. Consider eval { } for exception handling. | Use eval { } for exception handling, or consider safer alternatives like Try::Tiny
